--- a/web/public/index.html
+++ b/web/public/index.html
@@ -14,7 +14,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Hahmlet:wght@100&family=Source+Sans+Pro:wght@600&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Hahmlet:wght@100&family=Source+Sans+Pro:ital,wght@0,600;1,200;1,400&display=swap");
     </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
